samples/_failures_safe/1761084412_fb57c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9fd9f95.c: In function ‘main’:
./samples/SAFE/__tmp_f9fd9f95.c:147:5: error: ‘init’ undeclared (first use in this function); did you mean ‘int’?
  147 |     init
      |     ^~~~
      |     int
./samples/SAFE/__tmp_f9fd9f95.c:147:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f9fd9f95.c:147:9: error: expected ‘;’ at end of input
  147 |     init
      |         ^
      |         ;
./samples/SAFE/__tmp_f9fd9f95.c:147:5: error: expected declaration or statement at end of input
  147 |     init
      |     ^~~~
